Include-Dirs: /usr/include/python2.5, glue
Extra-Libraries: python2.5
Extra-Lib-Dirs: /usr/lib, /usr/lib/python2.5/site-packages

-- End detected settings section.  Everything below here should not
-- need editing.
Name: MissingPy
Version: 0.9.1
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005-2008 John Goerzen
C-Sources: glue/glue.c glue/excglue.c
Exposed-Modules: Python.Types,
 Python.Utils,
 Python.Objects,
 Python.Interpreter,
 Python.Exceptions,
 Python.Exceptions.ExcTypes,
 Python.Objects.File,
 Python.Objects.Dict,
 MissingPy.FileArchive.GZip,
 MissingPy.FileArchive.BZip2,
 MissingPy.AnyDBM
Other-Modules: Python.ForeignImports
Build-Depends: base, MissingH>=0.18.3, anydbm>=1.0.0
GHC-Options: -O2
Extensions: ForeignFunctionInterface, TypeSynonymInstances,
            FlexibleInstances
